# TVMC

./: README.md  README_EN.md
IPTVManager/: CMakeLists.txt
IPTVManager/resources/qml/: main.qml
IPTVManager/resources/qml/components/: IptvProgressBar.qml  IptvTableView.qml
IPTVManager/resources/qml/tabs/: BrowseTab.qml  CheckTab.qml  EditTab.qml  SettingsTab.qml
IPTVManager/src/ui/: manager_backend.cpp  manager_backend.h
IPTVScan/: CMakeLists.txt
IPTVScanner/resources/qml/: main.qml
IPTVScanner/resources/qml/IptvComponents/: IptvProgressBar.qml  IptvRadioButton.qml
IPTVScanner/resources/qml/components/: IptvCheckBox.qml  IptvComboBox.qml  IptvSpinBox.qml
IPTVScanner/src/ui/: scanner_backend.cpp  scanner_backend.h
TVMC/src/core/: CMakeLists.txt
TVMC/src/database/: CMakeLists.txt
TVMC/src/export/: CMakeLists.txt
TVMC/src/logic/: CMakeLists.txt
TVMC/src/multimedia/: CMakeLists.txt
TVMC/src/network/: CMakeLists.txt
TVMC/src/ui/: CMakeLists.txt
docs/: QUICKSTART.md  QUICKSTART_EN.md  SCAN_GUIDE.md  SCAN_GUIDE_EN.md
